# Layout_parser

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: detection.py  evaluation.py  main.py  utils.py
example_data/: 1.json  2.json  3.json
